force-app/main/default/objects/My_First_Big_Object__b.object
<CustomObject>
    <fields>
        <fullName>Account_Lookup__c</fullName>
        <label>Account Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Lookup</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MyTextField__c</fullName>
        <label>My Text Field</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Field__c</fullName>
        <label>Number Field</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Email__c</fullName>
        <label>Test Email</label>
        <type>Email</type>
    </fields>
    <indexes>
        <fullName>MyFirstBigIndex</fullName>
        <fields>
            <name>Account_Lookup__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>Date_Time__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>My First Big Index</label>
    </indexes>
    <label>My First Big Object</label>
    <pluralLabel>My First Big Object</pluralLabel>
</CustomObject>